--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   <version>1.0</version>
 
   <properties>
-    <allure.version>1.4.15</allure.version>
+    <allure.version>1.5.2</allure.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -30,7 +30,12 @@
     <dependency>
       <groupId>com.codeborne</groupId>
       <artifactId>selenide</artifactId>
-      <version>2.20</version>
+      <version>4.4.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.seleniumhq.selenium</groupId>
+      <artifactId>selenium-chrome-driver</artifactId>
+      <version>2.53.1</version>
     </dependency>
   </dependencies>
 
@@ -90,7 +95,7 @@
       <plugin>
         <groupId>ru.yandex.qatools.allure</groupId>
         <artifactId>allure-maven-plugin</artifactId>
-        <version>2.2</version>
+        <version>2.5</version>
       </plugin>
     </plugins>
   </reporting>
