--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
       <artifactId>selenium-chrome-driver</artifactId>
       <version>2.53.1</version>
     </dependency>
+      <dependency>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+          <version>1.2.17</version>
+      </dependency>
   </dependencies>
 
   <build>
