--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
           <artifactId>log4j</artifactId>
           <version>1.2.17</version>
       </dependency>
+    <dependency>
+      <groupId>org.graylog2.log4j2</groupId>
+      <artifactId>log4j2-gelf</artifactId>
+      <version>1.3.2</version>
+    </dependency>
   </dependencies>
 
   <build>
